force-app/main/default/objects/Delivery_Days_Configuration__c/Delivery_Days_Configuration__c.object-meta.xml
<CustomObject>
    <label>Delivery_Days_Configuration</label>
    <nameField>
        <label>Delivery_Days_Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery_Days_Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>