force-app/main/default/objects/Delivery_Days_Configuration__c/fields/DaysToDelay__c.field-meta.xml
<CustomField>
    <fullName>DaysToDelay__c</fullName>
    <label>Days to delay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>