force-app/main/default/objects/Delivery_Days_Configuration__c/fields/Default_code__c.field-meta.xml
<CustomField>
    <fullName>Default_code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default code</label>
    <type>Checkbox</type>
</CustomField>