force-app/main/default/objects/Delivery_Days_Configuration__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <label>Post Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>