force-app/main/default/objects/Delivery_Days_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>DaysToDelay__c</columns>
    <columns>Default_code__c</columns>
    <columns>Delivery_Days__c</columns>
    <columns>Post_Code__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>